Rollback master -> google merge.
Broke internal google targets

PiperOrigin-RevId: 941207897